добавляє класи та коректує лого

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <header>
       <nav class="nav">
         <div>
-          <a class="logo" href=""><span class="web">Web</span>Studio</a>
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-header">Studio</span></a
+          >
         </div>
         <ul class="list list-nav">
           <li class="item item-nav"><a class="link" href="">Studio</a></li>
@@ -44,38 +46,38 @@
       <!-- секція герой -->
 
       <section class="section section-hero">
-        <h1 class="title title-hero">Effective Solutions for Your Business</h1>
+        <h1 class="title-hero">Effective Solutions for Your Business</h1>
         <button class="btn btn-hero" type="button">Order Service</button>
       </section>
       <!-- секція переваги -->
 
       <section>
-        <h2>advandages</h2>
+        <h2 class="visibility">advandages</h2>
         <ul class="list">
           <li class="item">
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="title">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="item">
+            <h3 class="title">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="item">
+            <h3 class="title">Diligence</h3>
+            <p class="text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="item">
+            <h3 class="title">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -84,7 +86,7 @@
       </section>
       <section>
         <!-- секція команда -->
-        <h2>Our Team</h2>
+        <h2 class="title-first">Our Team</h2>
         <ul>
           <li>
             <img
@@ -93,8 +95,8 @@
               src="./image/team/mark-guerrero.jpg"
               alt="portrair of mark guerrero"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img
@@ -103,19 +105,18 @@
               src="./image/team/tom-ford.jpg"
               alt="portrair of tom ford"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
-            width ="360" height ="300"
             <img
               width="264"
               height="260"
               src="./image/team/camila-garcia.jpg"
               alt="portrair of camila garcia"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -124,15 +125,15 @@
               src="./image/team/daniel-wilson.jpg"
               alt="portrair of daniel wilson"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- портфоліо -->
 
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="title-first">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -141,8 +142,8 @@
               src="./image/portfolio/banking-app.jpg"
               alt="banking application"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="title">Banking App</h3>
+            <p class="text">App</p>
           </li>
           <li>
             <img
@@ -151,8 +152,8 @@
               src="./image/portfolio/cashless-payment.jpg"
               alt="They pay with their phone using a QR code"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="title">Cashless Payment</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -161,8 +162,8 @@
               src="./image/portfolio/meditation-app.jpg"
               alt="Notebook and phone"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="title">Meditation App</h3>
+            <p class="text">App</p>
           </li>
           <li>
             <img
@@ -171,8 +172,8 @@
               src="./image/portfolio/taxi-service.jpg"
               alt="The taxi driver is driving"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="title">Taxi Service</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -181,8 +182,8 @@
               src="./image/portfolio/screen-illustrations.jpg"
               alt="On the phone, there is an illustration of a ship and the moon"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="title">Screen Illustrations</h3>
+            <p class="text">Design</p>
           </li>
           <li>
             <img
@@ -191,17 +192,21 @@
               src="./image/portfolio/online-courses.jpg"
               alt="The girl in headphones is holding a phone"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="title">Online Courses</h3>
+            <p class="text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- підвал сайту -->
-    <footer>
-      <a>WebStudio</a>
-      <p>
+    <footer class="footer">
+      <div>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+      </div>
+      <p class="text text-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
